buton.killian/devops-303/dockerdep/deploy/redisService.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-db-service
spec:
  selector:
    app: redis-db
  ports:
    - protocol: TCP
      port: 80
      targetPort: 6379
