buton.killian/devops-303/dockerdep/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-303
spec:
  selector:
    app: devops-303
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8884
